# screenplay

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  snapcraft.yaml
screenplay/: constants.py  crawler.py  main.py  processors.py
