[tool.poetry]
name = "screenplay"
version = "0.2.0"
description = "Count words in TV shows"
authors = ["Eric Prykhodko <eprykhodko@bcdtriptech.com>"]

[tool.poetry.dependencies]
python = "^3.7"

aiohttp = "^3.4"
lxml = "^4.2"
docopt = "^0.6.2"
termcolor = "^1.1"
colorama = "^0.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
swc = 'screenplay.main:main'